--- a/app/views/contacts/_item.html.slim
+++ b/app/views/contacts/_item.html.slim
@@ -1,10 +1,16 @@
 table
   tr
-    th= contact.class.human_attribute_name(:lastname) + contact.class.human_attribute_name(:firstname)
+    th= t("contacts.name")
     td= contact.name
   tr
-    th= "#{contact.class.human_attribute_name(:company)}-#{contact.class.human_attribute_name(:department)}-#{contact.class.human_attribute_name(:position)}"
-    td= "#{contact.company}-#{contact.department}-#{contact.position}"
+    th= contact.class.human_attribute_name(:company)
+    td= contact.company
+  tr
+    th= contact.class.human_attribute_name(:department)
+    td= contact.department
+  tr
+    th= contact.class.human_attribute_name(:position)
+    td= contact.position
   tr
     td
   - contact.emails.each do |email|
