--- a/app/views/bank_accounts/show.html.slim
+++ b/app/views/bank_accounts/show.html.slim
@@ -1,7 +1,7 @@
 #show_command
-  = link_to t('bank_transactions.title'), [bank_account, :bank_transactions]
+  = link_to t('bank_transactions.title'), bank_transactions_path(bank_account_id: bank_account.id)
   = " | "
-  = link_to t('bank_transfers.title'), [bank_account, :bank_transfers]
+  = link_to t('bank_transfers.title'), bank_transfers_path(bank_account_id: bank_account.id)
   = " | "
   = link_to t('common.link.edit'), [:edit, bank_account]
   = " | "
