--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -1,9 +1,9 @@
 #show_command
-  = link_to t('common.title.back'), [bank_account, :bank_transactions]
+  = link_to t('common.title.back'), :bank_transactions
 
 h2= t("common.title.#{action_name}")
 
-= form_tag [:preview, bank_account, bank_transaction], multipart: true, class: "tabular" do
+= form_tag [:preview, @bank_transaction], multipart: true, class: "tabular" do
   .box
     p
       = label_tag :bank_type, t('.type')
