--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -1,18 +1,27 @@
+- content_for :search do
+  = form_tag :bank_transfers, :method => :get do
+    = select_tag :bank_account_id,
+      options_from_collection_for_select([BankAccount.new(:name => "all")]+BankAccount.all, :id, :name, params[:bank_account_id]),
+      "onchange" => "this.form.submit()"
 
 #show_command
-  = link_to t('bank_transfers.new.link'), [:new, bank_account, :bank_transfer]
+  = link_to t('bank_transfers.new.link'), [:new, :bank_transfer]
   = " | "
-  = link_to t('bank_transfers.excel.link'), [:excel, bank_account, :bank_transfers]
+  = link_to t('bank_transfers.excel.link'), [:excel, :bank_transfers]
   = " | "
   = link_to t('common.title.back'), :bank_accounts
 
-h2 #{bank_account.name}: #{bank_account.number}
+h2
+  - if @bank_account
+    = "#{@bank_account.name}: #{@bank_account.number}"
+  - else
+    = "은행 이체내역"
 
-- unless bank_transfers.empty?
-  = render 'list', menu: false
+- unless @bank_transfers.empty?
+  = render 'list', menu: true, bank_transfers: @bank_transfers
 
   br
   center
-    = will_paginate bank_transfers
+    = will_paginate @bank_transfers
 - else
   h4= t('.empty')
