--- a/app/views/card_approved_sources/_form.html.slim
+++ b/app/views/card_approved_sources/_form.html.slim
@@ -1,10 +1,13 @@
 #show_command
-  = link_to t('common.title.back'), [creditcard, :card_approved_sources]
+  = link_to t('common.title.back'), :card_approved_sources
 
 h2= t("common.title.#{action_name}")
 
-= form_for [creditcard, card_approved_source] do |f|
+= form_for @card_approved_source do |f|
   .box
+    p
+      = f.label :creditcard_id, Cardbill.human_attribute_name('cardno')
+      = select_tag(:creditcard_id, options_for_select(Creditcard.all.map{|card| [card.cardno_long, card.id]}))
     p
       = f.label :used_at
       = f.datetime_select :used_at, :order => [:year, :month, :day, :hour, :minute]
