--- a/app/views/creditcards/show.html.erb
+++ b/app/views/creditcards/show.html.erb
@@ -1,7 +1,7 @@
 <div id="show_command">
-  <%= link_to t('card_used_sources.index.title'), [@creditcard, :card_used_sources] %>
+  <%= link_to t('card_used_sources.index.title'), card_used_sources_path(creditcard_id: @creditcard.id) %>
   |
-  <%= link_to t('card_approved_sources.index.title'), [@creditcard, :card_approved_sources] %>
+  <%= link_to t('card_approved_sources.index.title'), card_approved_sources_path(creditcard_id: @creditcard.id)  %>
   |
   <%= link_to t("common.title.edit"), edit_creditcard_path(@creditcard) %>
   |
