--- a/app/views/card_approved_sources/_form.html.slim
+++ b/app/views/card_approved_sources/_form.html.slim
@@ -3,11 +3,11 @@
 
 h2= t("common.title.#{action_name}")
 
-= form_for @card_approved_source do |f|
+= form_for card_approved_source do |f|
   .box
     p
       = f.label :creditcard_id, Cardbill.human_attribute_name('cardno')
-      = select_tag(:creditcard_id, options_for_select(Creditcard.all.map{|card| [card.cardno_long, card.id]}))
+      = select_tag(:creditcard_id, options_for_select(Creditcard.all.map{|card| [card.cardno_long, card.id]}, params[:creditcard_id]))
     p
       = f.label :used_at
       = f.datetime_select :used_at, :order => [:year, :month, :day, :hour, :minute]
