refactor card used sources

--- a/app/views/card_approved_sources/index.html.slim
+++ b/app/views/card_approved_sources/index.html.slim
@@ -11,8 +11,8 @@
   = link_to t('common.title.back'), :root
 
 h2
-  - if @creditcard
-    = "#{@creditcard.nickname}: #{@creditcard.cardno}"
+  - if creditcard
+    = "#{creditcard.nickname}: #{creditcard.cardno}"
   - else
     = "카드 승인내역"
 
