--- a/app/views/bank_transactions/_form.html.slim
+++ b/app/views/bank_transactions/_form.html.slim
@@ -3,11 +3,11 @@
 
 h2= t("common.title.#{action_name}")
 
-= form_for @bank_transaction, html: {:class => "tabular"} do |f|
+= form_for bank_transaction, html: {:class => "tabular"} do |f|
   .box
     p
       = f.label :bank_account_id, BankAccount.human_attribute_name('name')
-      = select_tag(:bank_account_id, options_for_select(BankAccount.all.map{|bank| [bank.name, bank.id]}, @bank_transaction.bank_account ? @bank_transaction.bank_account.id : ""))
+      = select_tag(:bank_account_id, options_for_select(BankAccount.all.map{|bank| [bank.name, bank.id]}))
     p
       = f.label :transacted_at
       = f.datetime_select :transacted_at, :order => [:year, :month, :day, :hour, :minute]
