--- a/app/views/bank_transactions/show.html.slim
+++ b/app/views/bank_transactions/show.html.slim
@@ -1,17 +1,17 @@
 
 #show_command
-  - if @bank_transaction.transfer
-    = link_to t('bank_transactions.show.to_bank_transfer'), @bank_transaction.transfer
+  - if bank_transaction.transfer
+    = link_to t('bank_transactions.show.to_bank_transfer'), bank_transaction.transfer
     = " | "
-  = link_to t('common.link.edit'), [:edit, @bank_transaction]
+  = link_to t('common.link.edit'), edit_bank_transaction_path(bank_transaction, bank_account_id: bank_transaction.bank_account)
   = " | "
-  = link_to t('common.link.destroy'), @bank_transaction, :method => :delete, :confirm => "Are you sure?"
+  = link_to t('common.link.destroy'), bank_transaction, :method => :delete, :confirm => "Are you sure?"
   = " | "
   = link_to t('common.title.back'), :bank_transactions
 
 h2
-  - if @bank_transaction.bank_account
-    = "#{@bank_transaction.bank_account.name}: #{@bank_transaction.bank_account.number}"
+  - if bank_transaction.bank_account
+    = "#{bank_transaction.bank_account.name}: #{bank_transaction.bank_account.number}"
   - else
     = "입출금 상세정보"
 
@@ -19,34 +19,34 @@ h2
   table
     tr
       th= BankTransaction.human_attribute_name(:transacted_at)
-      td= @bank_transaction.transacted_at.strftime("%Y.%m.%d %H:%M")
+      td= bank_transaction.transacted_at.strftime("%Y.%m.%d %H:%M")
     tr
       th= BankTransaction.human_attribute_name(:transaction_type)
-      td= @bank_transaction.transaction_type
+      td= bank_transaction.transaction_type
     tr
       th= BankTransaction.human_attribute_name(:in)
-      td= number_to_currency @bank_transaction.in
+      td= number_to_currency bank_transaction.in
     tr
       th= BankTransaction.human_attribute_name(:out)
-      td= number_to_currency @bank_transaction.out
+      td= number_to_currency bank_transaction.out
     tr
       th= BankTransaction.human_attribute_name(:note)
-      td= @bank_transaction.note
+      td= bank_transaction.note
     tr
       th= BankTransaction.human_attribute_name(:remain)
-      td= number_to_currency @bank_transaction.remain
+      td= number_to_currency bank_transaction.remain
     tr
       th= BankTransaction.human_attribute_name(:branchname)
-      td= @bank_transaction.branchname
+      td= bank_transaction.branchname
     tr
       th= BankTransaction.human_attribute_name(:out_bank_account)
-      td= @bank_transaction.out_bank_account
+      td= bank_transaction.out_bank_account
     tr
       th= BankTransaction.human_attribute_name(:out_bank_name)
-      td= @bank_transaction.out_bank_name
+      td= bank_transaction.out_bank_name
     tr
       th= BankTransaction.human_attribute_name(:promissory_check_amount)
-      td= number_to_currency @bank_transaction.promissory_check_amount
+      td= number_to_currency bank_transaction.promissory_check_amount
     tr
       th= BankTransaction.human_attribute_name(:cms_code)
-      td= @bank_transaction.cms_code
+      td= bank_transaction.cms_code
