--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -12,8 +12,8 @@
   = link_to t('common.title.back'), :bank_accounts
 
 h2
-  - if @bank_account
-    = "#{@bank_account.name}: #{@bank_account.number}"
+  - if bank_account
+    = "#{bank_account.name}: #{bank_account.number}"
   - else
     = "은행 이체내역"
 
