--- a/app/views/bank_transfers/preview.html.slim
+++ b/app/views/bank_transfers/preview.html.slim
@@ -2,7 +2,7 @@
   = link_to t('common.title.back'), :bank_transfers
 h2 ..
 
-= form_tag [:excel, @bank_transfer], multipart: true, class: "tabular" do
+= form_tag [:excel, bank_transfer], multipart: true, class: "tabular" do
   .box
     p
       = label_tag :bank_type, t('.type')
