--- a/app/views/business_clients/_form.html.erb
+++ b/app/views/business_clients/_form.html.erb
@@ -19,8 +19,8 @@
       <%= f.text_field :category %>
     </p>
     <p>
-      <%= f.label :condition %>
-      <%= f.text_field :condition %>
+      <%= f.label :business_status %>
+      <%= f.text_field :business_status %>
     </p>
     <p>
       <%= f.label :address %>
