--- a/app/views/business_clients/show.html.erb
+++ b/app/views/business_clients/show.html.erb
@@ -21,8 +21,8 @@
           <td align="right"><%= @business_client.category %></td>
         </tr>
         <tr>
-          <th align="right"><%= BusinessClient.human_attribute_name('condition') %>:</th>
-          <td align="right"><%= @business_client.condition %></td>
+          <th align="right"><%= BusinessClient.human_attribute_name('business_status') %>:</th>
+          <td align="right"><%= @business_client.business_status %></td>
         </tr>
         <tr>
           <th align="right"><%= BusinessClient.human_attribute_name('address') %>:</th>
