--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -17,11 +17,11 @@
         <tr>
           <th align="right">
             <%= BusinessClient.human_attribute_name('category') %> /
-            <%= BusinessClient.human_attribute_name('condition') %>
+            <%= BusinessClient.human_attribute_name('business_status') %>
           </th>
           <td align="right">
             <%= taxbill.taxman.business_client.category %> /
-            <%= taxbill.taxman.business_client.condition %>
+            <%= taxbill.taxman.business_client.business_status %>
           </td>
         </tr>
         <tr>
