--- a/app/views/contacts/index.html.slim
+++ b/app/views/contacts/index.html.slim
@@ -26,7 +26,7 @@ h2 ..
         td= address.company
         td= address.department
         td= address.position
-        td= address.emails.nil? ? "" : "(#{address.emails.first.target}) #{address.emails.first.email} "
-        td= address.phone_numbers.nil? ? "" : "(#{address.phone_numbers.first.target}) #{address.phone_numbers.first.number}"
+        td= address.emails.empty? ? "" : "(#{address.emails.first.target}) #{address.emails.first.email} "
+        td= address.phone_numbers.empty? ? "" : "(#{address.phone_numbers.first.target}) #{address.phone_numbers.first.number}"
 - else
   h4= t('.empty')
