--- a/app/views/contacts/index.html.slim
+++ b/app/views/contacts/index.html.slim
@@ -9,9 +9,10 @@
   = " | "
   = link_to t('common.title.back'), :root
 
-h2 ..
+h2 목록
 
 - unless @contacts.empty?
+  p#contact-description 총 #{@contacts.count}개의 연락처가 있습니다.
   table#list-table
     tr
       th= contact.class.human_attribute_name(:name)
