--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -35,7 +35,7 @@ table tr td ul {
         <% else %>
           <li><%= link_to t("vacations.index.title"), vacation_path(@user) %></li>
         <% end %>
-        <% if @user.has_payment_info %>
+        <% if @user.ingroup?(:admin) || @user.has_payment_info %>
           <% if @user.ingroup?(:admin) %>
             <li><%= link_to t("payments.title"), :payments %></li>
           <% else %>
