--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -3,12 +3,28 @@
 
 h2= t('common.title.list')
 
-table#list-table
+- from = Time.zone.now - 4.month
+- to = Time.zone.now + 3.month
+
+table#list-table.payment-table
   tr
     th= User.human_attribute_name("name")
+    - period = Time.zone.parse("#{to.year}-#{to.month}-01 00:00:00")
+    - while from < period
+    - th_class = (period.month == Time.zone.now.month ? :today : '')
+      th[class=th_class]
+        = period.month.to_s + " " + t('datetime.prompts.month')
+      - period -= 1.month
+
     - @users.each do |user|
       tr.selectable onclick="location.href='#{payment_path(user)}'"
         td=h user.name
+        - period = Time.zone.parse("#{to.year}-#{to.month}-01 00:00:00")
+        - while from < period
+          - td_class = (period.month == Time.zone.now.month ? :today : '')
+          td[class=td_class]
+            = number_to_currency user.payments.where("date(pay_at) = ?", period.to_date).total
+          - period -= 1.month
 
 br
 
