--- a/app/views/payments/new_yearly.html.slim
+++ b/app/views/payments/new_yearly.html.slim
@@ -12,7 +12,7 @@ h2= t("common.title.new")
       = date_select :payments, :pay_start, :order => [:year, :month, :day]
     p
       = label_tag :pay_at, t('activerecord.attributes.payment.pay_at')
-      = select_tag "payments[pay_at]", options_for_select(1..30)
+      = select_tag "payments[pay_at]", options_for_select(1..30, 25)
     p
       = label_tag :pay_end, t('activerecord.attributes.payment.pay_end')
       = date_select :payments, :pay_end, :order => [:year, :month, :day], default: Date.today + 1.year
