--- a/app/views/payments/yearly.html.slim
+++ b/app/views/payments/yearly.html.slim
@@ -1,21 +1,23 @@
-- title t("payments.yearly.title")
-
 #show_command
   = link_to t('common.title.back'), payment_path(user)
 
 h2= t("common.title.new")
 
-= form_tag [:yearly, user, payment] do
+/ 입사일,급여지급일,계약기간,기본급
+
+= form_tag [:calculate, user, payment] do
   #box
     p
-      = label_tag :pay_start, t('activerecord.attributes.payment.pay_start')
-      = date_select :payments, :pay_start, :order => [:year, :month]
+      = label_tag :join_at, t('activerecord.attributes.payment.pay_start')
+      = date_select :payments, :join_at, :order => [:year, :month, :day]
     p
-      = label_tag "payments[total]", t('activerecord.attributes.payment.total')
-      = text_field_tag "payments[total]"
-    - 0.upto(11).each do |month|
-      p
-        = label_tag "payments[after][#{month}]", t('activerecord.attributes.payment.after', :month => month)
-        = text_field_tag "payments[after][#{month}]", 0
+      = label_tag :pay_at, t('activerecord.attributes.payment.pay_at')
+      = select_tag "payments[pay_at]", options_for_select(1..30, 25)
+    p
+      = label_tag :pay_end, t('activerecord.attributes.payment.pay_end')
+      = date_select :payments, :pay_end, :order => [:year, :month, :day], default: Date.today + 1.year
+    p
+      = label_tag "payments[amount]", t('activerecord.attributes.payment.amount')
+      = text_field_tag "payments[amount]"
     p
       = submit_tag t("common.button.add"), :id => "submit"
