--- a/app/views/hrinfos/show.html.erb
+++ b/app/views/hrinfos/show.html.erb
@@ -21,9 +21,11 @@
       <tr><th align="right"><%= Hrinfo.human_attribute_name('retired_on') %>:</th><td><%= @hrinfo.retired_on %></td></tr>
 <% end %>
     </table>
-    <div id="show_command">
-      <%= link_to "주소록 찾기", find_contacts_path(target_class: @hrinfo.class, target: @hrinfo, query: @hrinfo.fullname.gsub(/\s+/, "")), :class => 'popup' %>
-    </div>
+    <% if @user.ingroup?("admin") %>
+      <div id="show_command">
+        <%= link_to "주소록 찾기", find_contacts_path(target_class: @hrinfo.class, target: @hrinfo, query: @hrinfo.fullname.gsub(/\s+/, "")), :class => 'popup' %>
+      </div>
+    <% end %>
 
     <h3><%= t("contacts.show.title")%></h3>
     <ul>
