--- a/app/views/contacts/_item.html.slim
+++ b/app/views/contacts/_item.html.slim
@@ -12,6 +12,9 @@ table
     th= contact.class.human_attribute_name(:position)
     td= contact.position
   tr
+    th= contact.class.human_attribute_name(:private)
+    td= contact.private
+  tr
     td
   - contact.emails.each do |email|
     tr
