fix mysql reserved word problem

--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -21,8 +21,8 @@ h2= t("common.title.#{action_name}")
       = f.label :position
       = f.text_field :position
     p
-      = f.label :private
-      = f.check_box :private
+      = f.label :isprivate
+      = f.check_box :isprivate
 
     - contact.addresses.new
     h3 주소
