--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -25,6 +25,7 @@ table#list-table.payment-table
           - td_class = (period.month == Time.zone.now.month ? :today : '')
           td[class=td_class]
             = number_to_currency user.payments.where("pay_at BETWEEN ? AND ?", period, period + 1.month - 1.day).total
+          - period -= 1.month
 
 br
 
